# molekel

./: README.md  index.html  index.php  sync_pmwiki.sh
all_data/issues/: 1_55.S.molden  GAKB3LYPBromoform631GAllHESS.gam  Li4.molden  Li4.rasscf_5.5.molden  c1820h420.xyz  c2160.xyz  c2h5-c2.molden  c2h5-c3.molden  c2h5-c3b.molden  c2h6-c3.dos.molden  c2h6-c3.molf
all_data/molden_test/: adf.molf  ambfor_amber.xyz  ambfor_gaff.xyz  ampac.arc  ampac.test  bucky.xyz  chemx.test  complex2.out  cpeptide.gro  esp.test  esp.txt  esp.xyz  fragment  gamess_uk.input  gamess_uk.test1  gamess_uk.test2  gamess_us.h2o_631g_opt.out  gamess_us.irc  gamess_us_uhf_opt  gaussian.freq  gaussian.input  gaussian.test  jaguar.cube  molden.ogl  mopac.freq  mopac.test  pdb.test  qchem.test  reacpth.xyz  shelx.ins  surface.molf  test.fdat  test.mol2  test_homo.cube  tinker_charmm.xyz  tinker_mm3.xyz  uracil.fdat  uracil_gauss.out  vamp.test
all_shaders/: CH11-lattice.frag.txt  CH11-lattice.vert.txt  CH12-shLight.vert_1.txt  CH12-shLight.vert_10.txt  CH12-shLight.vert_2.txt  CH12-shLight.vert_6.txt  CH12-shLight.vert_8.txt  clip.frag  clip.vert  dqueue.frag.glsl  dqueue.vert.glsl  fGL2_Phong1_ugo.frag  fGL2_Phong1_ugo2.frag  fGL2_ToyBall.frag  fGL2_ToyBallTest.frag  fs.glsl  texcoord.vert.txt  vGL2_Null.vert  vGL2_Phong1_ugo.vert  vGL2_Phong1_ugo2.vert
data/: dafault_atom_colors  density.t41  molden.input  test3.zmatrix
events/linux_gnome/: apply_shader_after_molecule_selected.events  change_display_settings_after_molecule_selected.events  density_matrix_and_mep_after_molecule_selected.events  density_matrix_mep_after_molecule_selected.events  generate_density_matrix_surface_after_molecule_selected.events  liquorice_after_molecule_selected.events  liquorice_shader.events  load_aceticacid.events  msms_and_x-ray_shader_after_molecule_selected.events  readme  set_display_to_liquorice_after_molecule_selected.events  simple_animation.events  test.events
install/linux/: INSTALL  launch_molekel.csh  launch_molekel.sh  sp  splitldd.cpp  start_molekel.sh.sample
install/mac/: create_mac_dmg.sh  fixpath.sh  fixpath_ppc.sh
install/win/: nsisetup.sh  setup.nsi
shaders/: clip.frag  clip_phong.frag  lambert.frag  phong-plastic-transparent.params  phong.frag  phong_fog.frag  phong_fog.params  x-ray2.frag  x-ray_vtk5.1.frag
shaders/doc/: lambert.vert  readme
src/: AtomAnimation.h  CMakeLists.txt  Commands.h  MoleculeActorPickCommand.h  MoleculeVtkCommand.h  MolekelData.h  MolekelException.h  MolekelMolecule.h  license  license.cmake  main.cpp  molekel_sources.cmake  obms.cpp  versioninfo.cpp.in
src/dialogs/: ComputeElDensSurfaceDialog.h  ExportAnimationDialog.h  GridDataSurfaceDialog.h  ImagePlaneProbeDialog.h  MoleculeAnimationDialog.h  MoleculeTrajectoryDialog.h  MoleculeVibrationDialog.h  SasDialog.h  SesDialog.h  ShadersDialog.h  TimeStepDialog.h  ViewPropertiesDialog.h
src/old/: calcdens.cpp  constant.h  molekeltypes.cpp  molekeltypes.h  readgamess.cpp  readgauss.cpp  readmolden.cpp  readmolden.cxx  readnbo.cpp  readnbo.cxx  utilities.cpp
src/resources/: Molekel.icns  Thumbs.db  atomsdata.cpp  icon.cpp  license.cpp  molekelatoms.data
src/resources/toolbar/: reset_molecule2.xcf
src/utility/: BabelToMOIV.cpp  CommandLine.cpp  CommandLine.h  DialogWidget.h  DoubleSliderWidget.h  ElementTable.cpp  ElementTable.h  FoldableWidget.h  Geometry.h  Lorentzian.h  LorentzianInterpolator.h  MolekelChemPDBImporter.cpp  MolekelChemPDBImporter.h  MolekelToOpenBabel.cpp  OBGaussianCubeFormat.cpp  OBGridData.h  OBMSMSFormat.cpp  OBMoldenFormat.cpp  OBT41Data.h  OBT41Format.cpp  OBZmatrixFormat.cpp  RAII.h  System.cpp  System.h  Timer.h  UniformGrid.h  license  qtfileutils.h  vtkGLSLShaderActor.cpp  vtkGLSLShaderActor.h  vtkMSMSReader.cpp  vtkMSMSReader.h  vtkOpenGLGlyphMapper.h  vtkSoMapper.h
src/utility/events/: EventFilter.h  EventLogger.h  EventPlayer.cpp  EventPlayer.h  EventPlayerWidget.cpp  EventPlayerWidget.h  EventPositionTimeWidget.h  EventReader.h  EventRecorderWidget.cpp  EventRecorderWidget.h  ObjectName.cpp  ObjectName.h  license
src/utility/shaders/: GLSLShaderException.h  QGLSLShaderEditorWidget.cpp  QGLSLShaderEditorWidget.h  ShaderParameters.cpp  Shaders.cpp
src/utility/sys/: time.h
src/widgets/: AntiAliasingWidget.h  DepthPeelingWidget.h  DisplayPropertyWidget.h  GridDataSurfaceWidget.cpp  GridDataSurfaceWidget.h  ImagePlaneProbeWidget.cpp  ImagePlaneProbeWidget.h  MoleculeAnimationModeWidget.cpp  MoleculeAnimationModeWidget.h  MoleculeElDensSurfaceWidget.cpp  MoleculeElDensSurfaceWidget.h  MoleculeRenderingStyleWidget.cpp  MoleculeRenderingStyleWidget.h  MoleculeTrajectoryWidget.cpp  MoleculeTrajectoryWidget.h  MoleculeVibrationWidget.cpp  MoleculeVibrationWidget.h  SasWidget.h  SesWidget.h  ShaderWidget.h  SpectrumWidget.cpp  SpectrumWidget.h  TimeStepWidget.cpp  TimeStepWidget.h  ViewPropertiesWidget.h  WorkspaceTreeWidget.cpp  WorkspaceTreeWidget.h
svn/: molekel  molekel.html
test/data/: complex_hex_bromo_hess.gam
test/scripts/: addexit.sh  all_tests.sh  generate_report.sh  launch.sh  launch_mac_tiger.sh  launch_unix_gnome.sh  launch_unix_kde.sh  launch_win_xp.sh
test/test_cases/: test.txt
video/: addremovebond.html  addremovebond.swf  eldens_big.htm  eldens_big.swf  eldens_rt_update_big.htm  eldens_rt_update_small.htm  eldens_shader_apply_big.htm  eldens_shader_apply_small.htm  eldens_shader_big.htm  eldens_shader_big.swf  eldens_shader_small.htm  eldens_shader_small.swf  eldens_shader_small_no_decoration.htm  eldens_shader_small_no_decoration.swf  eldens_small.htm  eldens_small.swf  orbitals_big.htm  orbitals_small.htm  radiation_spectrum_big.htm  radiation_spectrum_big.swf  radiation_spectrum_small.htm  radiation_spectrum_small.swf  vibrational_modes_big.htm  vibrational_modes_small.htm
wiki/: index.php
wiki/cookbook/: VisitorsLogging.php  bliptv.php  mailform.php  mini.php  slideshare.php  youtube2.php
wiki/local/: config.php
wiki/scripts/: notify.php
wiki/wiki.d/: .htaccess  .pageindex  Admin.Admin  Admin.RecentChanges  Doc.HomePage,del-1166437572  Main.News  (+70 more)
(+514 files in other folders)
